test/pending/pos/local-objects.scala


object Main {
 val x = {
   object Boo
   Boo
 }
}

