test/pending/neg/t0673/Test.scala
object Test {
  val x = JavaClass.InnerClass
}
